Fixed alignment issues for dribbble page.

--- a/css/tanmay.css
+++ b/css/tanmay.css
@@ -586,8 +586,14 @@ iPad 3
 	line-height: 15px;
 }
 	.tanmay{
-	padding-top: 10% !important;
+		padding-top: 10% !important;
 }
+	.modal-content {
+		padding-top: 0px;
+	}
+	#dribbbleShots{
+		padding-left: 0px;
+	}
 }
 
 /* iPhone 5 ----------- */
@@ -646,6 +652,12 @@ iPad 3
 		line-height: 1.3;
 		color: #5d5d5d;
 		text-shadow: 0 1px 2px rgba(255, 255, 255, 0);
+	}
+	.modal-content {
+		padding-top: 0px;
+	}
+	#dribbbleShots{
+		padding-left: 0px;
 	}
 }
 
